--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="navbar-nav">
-      <a class="nav-link active" href="#">Home</a>
+      <a class="nav-link active" href="{% url 'home:index' %}">Home</a>
+      <a class="nav-link active" href="{% url 'accounts:user_register' %}">Register</a>
     </div>
   </div>
 </nav>
