--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>{% block title %}Online Shop{% endblock %}</title>
-    <style>
-      .jumbotron {
-        padding: 20px;
-        margin-bottom: 20px;
-        background-color: #e9ecef;
-      }
-
-      body {
-        background-color: #e9ecef;
-      }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   </head>
   <body>
     {% include 'inc/navbar.html' %}
@@ -23,8 +13,6 @@
       {% include 'inc/messages.html' %}
       {% block content %}{% endblock %}
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
