--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -2,7 +2,12 @@
   <div class="container-fluid">
     <div class="navbar-nav">
       <a class="nav-link active" href="{% url 'home:index' %}">Home</a>
-      <a class="nav-link active" href="{% url 'accounts:user_register' %}">Register</a>
+      {% if user.is_authenticated %}
+        <a class="nav-link active" href="{% url 'accounts:user_logout' %}">Logout</a>
+      {% else %}
+        <a class="nav-link active" href="{% url 'accounts:user_login' %}">Login</a>
+        <a class="nav-link active" href="{% url 'accounts:user_register' %}">Register</a>
+      {% endif %}
     </div>
   </div>
 </nav>
