--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h3>Hello user</h3>
+  {% for product in products %}
+    <div class="card" style="width: 18rem;">
+      <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+      <div class="card-body">
+        <h5 class="card-title"><a href="{{ product.get_absolute_url }}">{{ product.name }}</a></h5>
+      </div>
+    </div>
+  {% endfor %}
 {% endblock %}
