--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -4,6 +4,9 @@
       <a class="nav-link active" href="{% url 'home:index' %}">Home</a>
       {% if user.is_authenticated %}
         <a class="nav-link active" href="{% url 'accounts:user_logout' %}">Logout</a>
+        {% if user.is_admin %}
+          <a class="nav-link active" href="{% url 'home:bucket' %}">Bucket</a>
+        {% endif %}
       {% else %}
         <a class="nav-link active" href="{% url 'accounts:user_login' %}">Login</a>
         <a class="nav-link active" href="{% url 'accounts:user_register' %}">Register</a>
