--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -5,7 +5,7 @@
       {% if user.is_authenticated %}
         <a class="nav-link active" href="{% url 'accounts:user_logout' %}">Logout</a>
         {% if user.is_admin %}
-          <a class="nav-link active" href="{% url 'home:bucket' %}">Bucket</a>
+          <a class="nav-link active" href="{% url 'home:bucket_get_objects' %}">Bucket</a>
         {% endif %}
       {% else %}
         <a class="nav-link active" href="{% url 'accounts:user_login' %}">Login</a>
