--- a/templates/404.html
+++ b/templates/404.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}
-  404 Not found
-{% endblock %}
-
 {% block content %}
-  <h3>Error 404</h3>
+  <h3 class="text-center">404</h3>
+  <p class="text-center">Not Found</p>
 {% endblock %}
