--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  <div>
+    {% for category in categories %}
+      <a href="{{ category.get_absolute_url }}" class="btn btn-info">{{ category.name }}</a>
+    {% endfor %}
+  </div>
+
   {% for product in products %}
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem;display: inline-flex">
       <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
       <div class="card-body">
         <h5 class="card-title"><a href="{{ product.get_absolute_url }}">{{ product.name }}</a></h5>
