add to cart form in product detail.

--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -10,4 +10,9 @@
   <p>{{ product.price }}</p>
   <img src="{{ product.image.url }}" alt="{{ product.name }}">
   <p>{{ product.description }}</p>
+  <form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="add to cart">
+  </form>
 {% endblock %}
