add to cart view.

--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -10,7 +10,7 @@
   <p>{{ product.price }}</p>
   <img src="{{ product.image.url }}" alt="{{ product.name }}">
   <p>{{ product.description }}</p>
-  <form action="" method="post">
+  <form action="{% url 'orders:cart_add' product.id %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="add to cart">
