--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -11,6 +11,7 @@
         <a class="nav-link active" href="{% url 'accounts:user_login' %}">Login</a>
         <a class="nav-link active" href="{% url 'accounts:user_register' %}">Register</a>
       {% endif %}
+      <a class="nav-link active" href="{% url 'orders:cart' %}">Cart {{ cart|length }}</a>
     </div>
   </div>
 </nav>
